# meal-planner-web-app

./: Makefile  README.md  main.py  pyproject.toml  settings.py  tmp_insert_demo.py
api/: __init__.py
api/operations/: __init__.py  add_ingredient_unit.py  base.py  create_generic_unit.py  create_ingredient.py  get_ingredient.py  healthcheck.py
api/resources/: endpoints.py
models/: generic_unit.py  generic_unit_api_models.py  project_model.py
models/api_models/: __init__.py
models/ingredient/: api_models.py  ingredient.py  ingredient_unit.py  size_description.py
models/recipe/: recipe.py  recipe_ingredient.py  recipe_ingredient_parser.py  recipe_ingredient_quantity.py
services/: __init__.py  errors.py  generic_unit.py  ingredient.py  project_model.py  recipe.py
tests/: conftest.py  factories.py  in_memory_mongo.py  test_generic_unit_model.py  test_ingredient_service.py  test_recipe_service.py
tests/api/operations/: __init__.py  test_add_ingredient_unit_operation.py  test_create_generic_unit_operation.py  test_create_ingredient_operation.py  test_get_ingredient_operation.py  test_healthcheck_operation.py  test_operation_base.py  test_operations.py
tests/api/resources/: __init__.py  endpoint_helpers.py  test_add_ingredient_unit_endpoint.py  test_create_generic_unit_endpoint.py  test_create_ingredient_endpoint.py  test_endpoints.py  test_get_ingredient_endpoint.py  (+1 more)
tests/models/: test_generic_unit_model.py  test_ingredient_model.py  test_recipe_ingredient_model.py  test_recipe_model.py
tests/services/: __init__.py  test_recipe_service.py
