[project]
name = "meal-planning-web-app"
version = "0.1.2"
description = "Meal planning web app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "envbind",
    "fastapi>=0.115.0",
    "pydantic",
    "pymongo>=4.16.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
